# stylus-benchmark

./: .gitmodules  README.md
ed25519-solidity/: .gitignore  Justfile
ed25519-solidity/script/: Ed25519.s.sol
ed25519-solidity/src/: Ed25519.sol
ed25519-stylus/: .env.example  Cargo.toml  Justfile
ed25519-stylus/src/: ed25519.rs  lib.rs  main.rs
erc20-solidity/: .gitignore  Justfile  foundry.toml
erc20-solidity/script/: Banica.s.sol
erc20-solidity/src/: Banica.sol
erc20-stylus/: .env.example  Cargo.toml  Justfile  README.md
erc20-stylus/src/: lib.rs  main.rs
