[package]
name = "stylus-ed25519"
version = "0.1.0"
edition = "2021"

[dependencies]
stylus-sdk = "0.6.0"
alloy-primitives = "=0.7.6"
alloy-sol-types = "=0.7.6"
ed25519-compact = { version = "2.1.1", default-features = false }

[features]
export-abi = ["stylus-sdk/export-abi"]

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"
